--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 {% load static%}
 <link href="{% static 'layouts/vertical-light-menu/css/light/loader.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'layouts/vertical-light-menu/css/dark/loader.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'layouts/tender_details.css' %}" rel="stylesheet" type="text/css" />
 <script src="{% static 'layouts/vertical-light-menu/loader.js' %}"></script>
 
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
@@ -9,6 +10,10 @@
 <link href="{% static 'src/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'layouts/vertical-light-menu/css/light/plugins.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'layouts/vertical-light-menu/css/dark/plugins.css' %}" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet" />
+<link href="{% static 'filter/css/main.css' %}" rel="stylesheet" />
+<link href="{% static 'filter1/css/main.css' %}" rel="stylesheet" />
+<link href="{% static 'src/footer.css' %}" rel="stylesheet" />
 <!-- END GLOBAL MANDATORY STYLES -->
 
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM STYLES -->
@@ -19,6 +24,7 @@
 
    <!--     Fonts and icons     -->
    <link href="{% static 'src/assets/css/font-awesome.min.css' %}" rel="stylesheet">
+   <link href="{% static 'src/assets/css/actions.css' %}" rel="stylesheet">
    <!-- CSS Just for demo purpose, don't include it in your project -->
    <link href="{% static 'src/assets/css/etd-style.min.css' %}" rel="stylesheet">
    <link href="{% static 'src/assets/css/NewAddedStyle.min.css' %}" rel="stylesheet">
@@ -54,3 +60,7 @@
     <script src="{% static 'src/assets/js/dashboard/dash_1.js' %}"></script>
     <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
     <script src="{% static 'src/assets/js/adrum.js.download' %}"></script>
+    <script src="{% static 'filter/js/extention/choices.js' %}"></script>
+    <script src="{% static 'filter/js/extention/flatpickr.js' %}"></script>
+    <script src="{% static 'filter1/js/extention/flatpickr.js' %}"></script>
+    
