--- a/templates/parts/sidebar.html
+++ b/templates/parts/sidebar.html
@@ -11,11 +11,16 @@
                                 <a href="{% url 'index' %}"">
                                     <img src="{% static 'src/assets/img/rawaf.png' %}" class="navbar-logo" alt="logo" width="200">
                                 </a>
+                                
                             </div>
+                            
                             <div class="nav-item theme-text">
+                                
                                 <br>
+
                             </div>
                         </div>
+                        
                         <!-- <div class="nav-item sidebar-toggle">
                             <div class="btn-toggle sidebarCollapse">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevrons-left"><polyline points="11 17 6 12 11 7"></polyline><polyline points="18 17 13 12 18 7"></polyline></svg>
@@ -85,13 +90,13 @@
                             </a>
                             <ul class="collapse submenu list-unstyled" id="ecommerce" data-bs-parent="#accordionExample">
                                 <li>
-                                    <a href="./app-ecommerce-product-shop.html"> Project Report </a>
+                                    <a href=""> Project Report </a>
                                 </li>
                                 <li>
-                                    <a href="./app-ecommerce-product.html"> Project Details </a>
+                                    <a href=""> Project Details </a>
                                 </li>
                                 <li>
-                                    <a href="./app-ecommerce-product-list.html"> Add New Project </a>
+                                    <a href=""> Add New Project </a>
                                 </li>                            
                             </ul>
                         </li>
@@ -108,16 +113,16 @@
                             </a>
                             <ul class="collapse submenu list-unstyled" id="blog" data-bs-parent="#accordionExample">
                                 <li>
-                                    <a href="./app-blog-grid.html"> My Task </a>
+                                    <a href=""> My Task </a>
                                 </li>
                                 <li>
-                                    <a href="./app-blog-list.html"> Department Task </a>
+                                    <a href=""> Department Task </a>
                                 </li>
                                 <li>
-                                    <a href="./app-blog-post.html"> Managment Tasl </a>
+                                    <a href=""> Managment Tasl </a>
                                 </li>
                                 <li>
-                                    <a href="./app-blog-create.html"> Add Circulation </a>
+                                    <a href=""> Add Circulation </a>
                                 </li>                            
                             </ul>
                         </li>
@@ -159,16 +164,16 @@
                             </a>
                             <ul class="collapse submenu list-unstyled" id="elements" data-bs-parent="#accordionExample">
                                 <li>
-                                    <a href="./element-alerts.html"> Tendering Guide </a>
+                                    <a href=""> Tendering Guide </a>
                                 </li>
                                 <li>
-                                    <a href="./element-avatar.html"> Project Guide </a>
+                                    <a href=""> Project Guide </a>
                                 </li>
                                 <li>
-                                    <a href="./element-badges.html"> Action Guide </a>
+                                    <a href=""> Action Guide </a>
                                 </li>
                                 <li>
-                                    <a href="./element-breadcrumbs.html"> Settings Guide  </a>
+                                    <a href=""> Settings Guide  </a>
                                 </li>                            
     
                             </ul>
