--- a/templates/tendering/tender_report.html
+++ b/templates/tendering/tender_report.html
@@ -60,7 +60,7 @@
                         <div class="tabs">
                             <div class="tabby-tab">
                                 <input type="radio" id="tab-1" name="tabby-tabs" checked>
-                                <label for="tab-1">تقرير المناقصات الجارية</label>
+                                <label for="tab-1">تقرير المناقصات</label>
                                 <div class="tabby-content">
                                     <table class="table table-striped mb-0">
                                         <thead style="background-color: #002d72;">
