chang all without db

--- a/templates/base.html
+++ b/templates/base.html
@@ -303,7 +303,7 @@
 
                             {% if user_contract_permission.add_new_contract == 'Yes' %}
                             <li>
-                                <a href="{% url 'add_new_contract' %}"> طلب اصدار عقد جديد </a>
+                                <a href="{% url 'add_new_contract' %}"> طلب عقد جديد </a>
                             </li>
                             {% endif %}
                         </ul>
