logo padding and inprogress count and divide attch files

--- a/templates/base.html
+++ b/templates/base.html
@@ -195,7 +195,7 @@
                     <div class="">
                         <div class="">
                             <a href="{% url 'home' %}">
-                                <img alt="LOGO" src="{% static 'src/assets/img/rawaf.png' %}" width="200">
+                                <img style="padding: 15px;" alt="LOGO" src="{% static 'src/assets/img/rawaf.png' %}" width="200">
                             </a>
                         </div>
 
