--- a/templates/contract/contract_main_index_viewall.html
+++ b/templates/contract/contract_main_index_viewall.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static%} {% block content %}
 <div class="layout-px-spacing">
-    <div class="card" style="margin-top: 2%;">
+    <div class="card" style="margin-top: 2%;  background-color:#c19b2e;">
         <div class="card-icon mb-4">
             <br>
             
@@ -45,6 +45,17 @@
                                  <span style="font-size: 20px; color: crimson; font-weight: bolder">{{notification_count}} اشعارات</span>
                             </div>
                         </th>
+
+                                                
+                        <th scope="col" style="text-align: center;">
+
+                            {% if inprogress_count == 0 %}
+                            {{inprogress_count | cut:'0'}}
+                            {%else%}
+                            {{inprogress_count}} عقود جارية
+                            {% endif %}
+
+                    </th>
 
                         <th scope="col" style="text-align: center;">
 
