show contract_duration in viewall

--- a/templates/contract/contract_main_index_viewall.html
+++ b/templates/contract/contract_main_index_viewall.html
@@ -42,7 +42,7 @@
                                 </svg>
                                 </a>   
                         
-                                 <span style="font-size: 20px; color: crimson; font-weight: bolder">{{notification_count}} اشعارات</span>
+                                 <span style="font-size: 20px; color: rgba(220, 20, 60, 0.945); font-weight: bolder">{{notification_count}} اشعارات</span>
                             </div>
                         </th>
 
