cut days from tendering report

--- a/templates/tendering/tender_report.html
+++ b/templates/tendering/tender_report.html
@@ -68,7 +68,7 @@
                               <tbody>
                                   <tr>
                                       <td>{{x.no}} ـ {{x.title}}</td>
-                                      <td>  {{x.submit_date}} ـ ـ ـ ({{x.Days_till|cut:'days'|add:'يوم'}})</td>
+                                      <td>  {{x.submit_date}} ـ ـ ـ ({{x.Days_till|cut:'days'|cut:'day'|add:'يوم'}})</td>
                                       <td>{{x.owner}}</td>
                                       <td>{{x.management}}</td>
                                       <td></td>
